# wave_sim_v1

./: .gitignore  INSTALL_WINDOWS.md  QUICKSTART.md  README.md  debug.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_backend.py  run_local.bat  run_local.sh  setup.sh  start-docker.sh  start_frontend.bat  start_frontend.sh  start_gui.bat  start_gui.sh  start_gui_simple.sh  test_backend.py  test_sfepy_migration.py
backend/app/: main.py  main_persistent_test.py  main_test.py  schemas.py
data/cache/: .gitkeep
data/jobs/: 02c0a78f-9ecf-4b72-882c-f25587613b84.json  02c3df75-e240-46c8-afc7-92161614bdfa.json  0608280c-77cf-4862-b607-050d99c3af1f.json  07159694-6f0c-477e-9201-11b5f2cf0d2e.json  099ea54c-144c-4009-9e59-830db913f486.json  0a8a7424-c6c8-477e-a58b-d4e75e6da7eb.json  1fdfe4be-8929-4ba8-9a07-8d5124b6125a.json  2380453d-3212-4420-a0f7-cb2f69bf419b.json  29aec69f-6968-4969-8103-0c86c300029d.json  2baef656-4369-4d7f-a0f6-e94bfa251255.json  2f997fa7-94f4-4967-a1b7-cf72d5ec083b.json  321fbce4-49e5-4ed0-b497-baf197041c56.json  370fd03d-1d75-4099-988a-1020f5bc1e4d.json  38edcdc0-00ef-42ad-b603-789d9108dc09.json  3b45e3b9-3f54-41de-b2ef-a38d704ae060.json  47e2bb7d-f73f-4aa7-bf01-aec34ed64fab.json  4837e6c3-ad87-4452-bcda-7ef8d2170da6.json  4cb9d6dc-07cd-4d87-a0b7-8499f2ee5aaf.json  52c3ae3c-ccf1-41b4-ab51-d1c017707fee.json  543b1ff1-413b-4015-9e12-e7e80ef676ca.json  6294ca36-d16b-42a2-8caa-4393e3802449.json  629f124c-8d9f-4a8b-85c9-e2235e613b6a.json  656294fe-d447-4ea3-83a2-113dde9632a2.json  68ef702e-69cf-495c-a3ef-8053201bc3f2.json  6a29db15-1c52-40ca-ac77-85f19d6e0b85.json  6a80ec05-143b-4cef-a7f8-86a7880cabf0.json  6fbf37dd-752e-4032-ba67-4fb69bfa8c87.json  746c0c77-2859-4a6d-a87e-e1d682b629ad.json  74c65786-e749-4d7b-92bc-31c228144108.json  793c1bdd-2216-477c-b522-32033c7bade9.json  7d5a531e-4e83-4785-be38-e34977b22e77.json  831142c1-1175-4032-af65-a5de0f157e18.json  83eea24f-e129-445c-814f-03f0f478a4eb.json  84492f81-be86-4c7b-bdaf-c986c1406530.json  85596247-dcb3-4164-9e5c-d1c77237cd53.json  8823ae47-5573-4cac-97bc-6df6832a35a9.json  885c9e4d-6da3-4591-b279-f9244aabb124.json  89bbfb2c-b4b2-4e21-a38d-e767d1b8a347.json  8b502803-bf83-4b0c-b99c-70a1dfaea958.json  8c43d8c4-52e4-411e-a4ba-3c9ceb174ce4.json  (+30 more)
data/meshes/: .gitkeep
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: development.md
examples/sample_room/: config.yaml
fem/: gpu_helmholtz_solver.py  helmholtz_solver.py  test_helmholtz.py
frontend/: package-lock.json  package.json
frontend/public/: electron.js  (+2 more)
tests/: README.md  __init__.py  conftest.py  run_tests.py
(+10 files in other folders)
